# genrss

./: .env  README.md  app.py  pyproject.toml
.github/workflows/: generate-feeds.yml
data/: bigsister.json  ollama.json
docs/: _headers  ollama.xml  projects.html
feeds/: bigsister.xml
src/: app.py
